# Aurora

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  FUNDING.yml  LICENSE  README.md  Shaders.md  imgui.ini
.github/: FUNDING.yml
.github/workflows/: cmake.yml
Assets/: Pickaxe_animation.fbx  Test.mat  box.fbx  box2.fbx  box_cubeUV.fbx  idle.fbx  imgui.ini  sphere.fbx  transform_test.fbx  weird_shape.fbx
Assets/Aim/: Pickaxe_swing_animation.fbx
Assets/Materials/: BlueprintPBR.mat
Assets/Shaders/: BaseDepth.vert  Decals.h  FSQuad.vert  ScreenTexture.frag  Shadows.h  ShadowsPS.glsl  color.fss  common.h  fs_quad.vss  ps_common.h  vs_common.h
Assets/Shapes/: Box.amesh  Sphere.amesh
Assets/Textures/: cloudysky.cubemap  nightsky.cubemap  stars_box.cubemap
Aurora/: CMakeLists.txt
Aurora/src/Aurora/: Engine.hpp
Aurora/src/Aurora/App/: AppContext.hpp  CursorMode.hpp  GLFWWindow.cpp  ISystemWindow.hpp
Aurora/src/Aurora/App/Input/GLFW/: Manager.hpp
Aurora/src/Aurora/Core/: AUID.hpp  Archive.hpp  DataPacking.hpp  Enum.hpp  FileSystem.cpp  FormatString.hpp  JsonUtil.hpp  Object.hpp  ObjectMacros.hpp  Random.hpp  Stack.hpp  String.hpp  StructuredArchive.hpp  SystemUtils.hpp  Types.hpp  UTF8.cpp  UTF8.hpp
Aurora/src/Aurora/Editor/: ConsoleWindow.hpp  GameViewportWindow.hpp  MainEditorPanel.cpp  MaterialWindow.cpp  PropertiesWindow.cpp  PropertiesWindow.hpp  SceneHierarchyWindow.cpp  Utils.hpp  WindowBase.hpp
Aurora/src/Aurora/Framework/: ActorComponent.cpp  ActorComponent.hpp  ComponentStorage.hpp  Layer.hpp  Lights.hpp  MeshComponent.hpp  ParticleEffect.hpp  ParticleSystemComponent.hpp  Scene.cpp  Scene.hpp  SceneComponent.cpp  SkeletalMeshComponent.hpp  SkyLight.cpp  StaticMeshComponent.cpp  StaticMeshComponent.hpp  Transform.cpp  Transform.hpp  UserInterface.cpp  UserInterface.hpp
Aurora/src/Aurora/Framework/Animation/: Animation.hpp  AnimationCurve.cpp  AnimationCurve.hpp
Aurora/src/Aurora/Framework/Mesh/: Mesh.cpp
Aurora/src/Aurora/Framework/Physics/: ColliderComponent.cpp  ColliderComponent.hpp  RigidBodyComponent.cpp  RigidBodyComponent.hpp
Aurora/src/Aurora/Graphics/: BufferCache.hpp  DShape.cpp  GPUBlockAllocator.cpp  GPUBlockAllocator.hpp  PassType.hpp  RenderManager.hpp  ViewPort.hpp  ViewPortManager.cpp
Aurora/src/Aurora/Graphics/Base/: BlendState.hpp  Buffer.hpp  FDepthStencilState.hpp  IRenderDevice.hpp  PrimitiveType.hpp  RasterState.hpp  TypeBase.hpp
Aurora/src/Aurora/Graphics/Material/: Material.cpp
Aurora/src/Aurora/Graphics/OpenGL/: GLBufferLock.cpp  GLBufferLock.hpp  GLConversions.cpp  GLConversions.hpp  GLFormatMapping.hpp  GLRenderDevice.cpp  GLRenderDevice.hpp  GLRenderGroupScope.cpp  GLSampler.hpp  GLShaderProgram.cpp  GLShaderProgram.hpp  GLSwapChain.hpp  GLTexture.cpp  GLTexture.hpp  GLUtils.hpp
Aurora/src/Aurora/Logger/: Logger.cpp  Logger.hpp
Aurora/src/Aurora/Physics/: AABB.cpp  AABBTree.cpp  AABBUtil.hpp  Collision.hpp  Frustum.hpp  Ray.hpp  Types.hpp
Aurora/src/Aurora/Render/: PostProcessEffect.hpp  SceneRenderer.cpp  SceneRenderer.hpp  SceneRendererDeferred.cpp  SceneRendererDeferred.hpp  SceneRendererDeferredNew.cpp  SceneRendererDeferredNew.hpp
Aurora/src/Aurora/Resource/: AssetBank.hpp  AssimpModelLoader.cpp  AssimpModelLoader.hpp  FileTree.cpp  FileTree.hpp  MaterialLoader.cpp  ResourceManager.hpp
Aurora/src/Aurora/RmlUI/: RmShellRenderInterfaceOpenGL.cpp  RmShellSystemInterface.cpp  RmShellSystemInterface.hpp  RmlTools.hpp  RmlUI.cpp  RmlUI.hpp  RmlUIFileInterface.cpp  RmlUIFileInterface.hpp
Aurora/src/Aurora/Sound/FMOD/: FmodSoundCommon.hpp  FmodSoundEvent.cpp  FmodSoundSystem.hpp
Aurora/src/Aurora/Tools/: ImGuizmo.cpp  ImGuizmo.h  backward.cpp  robin_hood.h
Shaders/: common.h
Shaders/World/: instancing.h
Source/: CMakeLists.txt
Source/Aurora/: Aurora.hpp
Source/AuroraCore/: CMakeLists.txt
Source/AuroraCore/Source/Aurora/Core/: ColorRGBA.cpp  ColorRGBA.hpp  Container.hpp  Crc.hpp  Delegate.hpp  FilePackager.cpp  FilePackager.hpp  FileSystem.hpp  IdManager.hpp  Log.hpp  MemoryStream.hpp  Random.cpp  Random.hpp  Sizeable.hpp  SmartPointer.hpp  String.hpp  Vector.hpp
Source/AuroraEngine/: CMakeLists.txt
Source/AuroraEngine/Source/Aurora/: Aurora.cpp  Aurora.hpp  AuroraEngine.cpp  AuroraEngine.hpp
Source/AuroraEngine/Source/Aurora/App/: CursorMode.hpp  Window.cpp  Window.hpp  WindowGameContext.cpp  WindowGameContext.hpp
Source/AuroraEngine/Source/Aurora/App/Input/: InputCoreTypes.cpp  InputCoreTypes.hpp  InputManager.cpp  InputManager.hpp  InputMapping.hpp  Keys.cpp  Keys.h
Source/AuroraEngine/Source/Aurora/Assets/: AssetManager.cpp  AssetManager.hpp  ModelImporter.cpp  ModelImporter.hpp
Source/AuroraEngine/Source/Aurora/Framework/: Actor.cpp  Actor.hpp  GameModeBase.cpp  GameModeBase.hpp  Object.hpp
Source/AuroraEngine/Source/Aurora/Framework/Animation/: Animation.hpp  AnimationChannel.hpp  AnimationCurve.cpp  AnimationCurve.hpp  Armature.hpp  Bone.hpp
Source/AuroraEngine/Source/Aurora/Framework/Component/: ActorComponent.hpp  SceneComponent.hpp
Source/AuroraEngine/Source/Aurora/Framework/Mesh/: Mesh.cpp  Mesh.hpp  SkeletalMesh.cpp  SkeletalMesh.hpp  StaticMesh.cpp  StaticMesh.hpp
Source/AuroraEngine/Source/Aurora/Render/: Material.cpp  Material.hpp  RenderInterface.cpp  RenderInterface.hpp  ShaderCollection.hpp  VertexBuffer.hpp
Tests/EngineTest/: CMakeLists.txt  main.cpp
cmake/: FindFbxSdk.cmake
examples/: CMakeLists.txt
examples/animation_retarget/: CMakeLists.txt  main.cpp
examples/base_app/: CMakeLists.txt  main.cpp
examples/benchmark/: CMakeLists.txt  memory_benchmark.cpp
examples/metal_develop/: CMakeLists.txt  main.cpp
examples/physics/: CMakeLists.txt  main.cpp  visualisation.cpp
lib/: CMakeLists.txt
lib/Vulkan/: CMakeLists.txt
lib/fmod/: CMakeLists.txt
lib/freetype/src/gzip/: zutil.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h  glad.h
lib/glad/src/: gl.c  glad.c
lib/imgui/: CMakeLists.txt
lib/stb/: CMakeLists.txt
metal-cmake/: CMakeLists.txt
src/Aurora/: Aurora.cpp  Aurora.hpp  (+3 more)
tests/: CMakeLists.txt
(+495 files in other folders)
