add_executable(RenderTest main.cpp)
target_link_libraries(RenderTest AuroraCore)
target_link_libraries(RenderTest AuroraEngine)
target_link_libraries(RenderTest -static-libgcc -static-libstdc++ -Wl,-Bstatic -lstdc++ -lpthread -Wl,-Bdynamic)
add_test(NAME RenderTest COMMAND Aurora)
install_tools_lib(RenderTest)
copy_required_dlls(RenderTest)